--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <section class=hero>
             <div class="container">
             <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-            <button type="button" data-modal-open class="hero-button">Заказать услугу</button>
+            <button type="button" data-modal-open class="s-btn hero-button">Заказать услугу</button>
             </div>
 
         </section>
