--- a/index.html
+++ b/index.html
@@ -49,16 +49,16 @@
         </nav>
         <ul class="header__contact list">
           <li class="header__contact-item link">
-            <a href="mailto:info@devstudio.com" class="menu-contact link">
-              <svg width="16" height="12" class="contact-header-svg mail-svg">
+            <a href="mailto:info@devstudio.com" class="menu__contact link">
+              <svg width="16" height="12" class="header__contact-svg mail-svg">
                 <use href="./images/sprite.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com</a
             >
           </li>
           <li class="header__contact-item link">
-            <a href="tel:+380961111111" class="menu-contact link">
-              <svg width="10" height="16" class="contact-header-svg tel-svg">
+            <a href="tel:+380961111111" class="menu__contact link">
+              <svg width="10" height="16" class="header__contact-svg tel-svg">
                 <use href="./images/sprite.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11</a
@@ -71,7 +71,7 @@
       <!--HERO-->
       <section class="hero">
         <div class="container">
-          <h1 class="hero_title">Эффективные решения для вашего бизнеса</h1>
+          <h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
           <button
             type="button"
             data-modal-open
@@ -620,8 +620,8 @@
     <!--MODAL-->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <button type="button" data-modal-close class="modal-close-btn button">
-          <svg class="modal-close-svg">
+        <button type="button" data-modal-close class="modal__close-btn button">
+          <svg class="modal__close-svg">
             <use href="./images/sprite.svg#icon-close_modal"></use>
           </svg>
         </button>
