--- a/portfolio.html
+++ b/portfolio.html
@@ -40,15 +40,15 @@
         </nav>
         <ul class="header__contact list">
             <li class="header__contact-item link">
-                <a href="mailto:info@devstudio.com" class="menu-contact link">
-                    <svg width="16" height="12" class="contact-header-svg mail-svg">
+                <a href="mailto:info@devstudio.com" class="menu__contact link">
+                    <svg width="16" height="12" class="header__contact-svg mail-svg">
                         <use href="./images/sprite.svg#icon-envelope"></use>
                     </svg>
                     info@devstudio.com</a>
             </li>
             <li class="header__contact-item link">
-                <a href="tel:+380961111111" class="menu-contact link">
-                    <svg width="10" height="16" class="contact-header-svg tel-svg">
+                <a href="tel:+380961111111" class="menu__contact link">
+                    <svg width="10" height="16" class="header__contact-svg tel-svg">
                         <use href="./images/sprite.svg#icon-smartphone"></use>
                     </svg>
                     +38 096 111 11 11</a>
